<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Opções">
            <menu>
                <item
                    android:id="@+id/menu_add_teacher"
                    android:icon="@drawable/ic_account_circle"
                    android:title="@string/menu_add_teatcher" />

                <item
                    android:id="@+id/menu_add_student"
                    android:icon="@drawable/ic_person_add"
                    android:title="@string/menu_add_student" />
                <item
                    android:id="@+id/menu_add_matter"
                    android:icon="@drawable/ic_menu_book"
                    android:title="@string/menu_add_matter" />
                <item
                    android:id="@+id/menu_add_classroom"
                    android:icon="@drawable/ic_classroom"
                    android:title="Turma" />
            </menu>
        </item>
        <item android:title="@string/menu_social">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_ic_share" />
            </menu>
        </item>

    </group>

</menu>
