<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/add_student_textView_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Cadastrar Aluno"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/add_student_imageView_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_student_textView_info" />

        <EditText
            android:id="@+id/register_ediText_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/register_ediText_name"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_student_imageView_logo" />

        <TextView
            android:id="@+id/register_ediText_invalidName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_name"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_name"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/register_ediText_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/register_ediText_email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_name" />

        <TextView
            android:id="@+id/register_ediText_invalidEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_email"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_email"
            tools:ignore="SmallSp" />

        <com.santalu.widget.MaskEditText
            android:id="@+id/register_ediText_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/register_ediText_phone"
            android:inputType="phone"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_email"
            app:met_mask="(##) #########" />

        <TextView
            android:id="@+id/register_ediText_invalidPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_phone"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_phone"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/register_ediText_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/register_ediText_address"
            android:inputType="textPostalAddress"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_phone" />

        <TextView
            android:id="@+id/register_ediText_invalidAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_address"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_address"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/register_ediText_addressNumber"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_ediText_addressNumber"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/register_ediText_addressComplement"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/register_ediText_addressComplement"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_address" />

        <TextView
            android:id="@+id/register_ediText_invalidAddressNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_addressNumber"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_addressNumber"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/register_ediText_addressComplement"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/register_ediText_addressComplement"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@id/register_ediText_password"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/register_ediText_addressNumber"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_address" />

        <TextView
            android:id="@+id/register_ediText_invalidAddressComplement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_addressComplement"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_addressComplement"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/register_ediText_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/register_ediText_password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/register_ediText_password"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/register_ediText_confirmPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_addressNumber" />

        <TextView
            android:id="@+id/register_ediText_invalidPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_password"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_password"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/register_ediText_confirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/register_ediText_confirmPassword"
            android:inputType="textPassword"
            android:text=""
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/register_ediText_password"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_addressComplement" />

        <TextView
            android:id="@+id/register_ediText_invalidConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="30dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="10sp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/register_ediText_confirmPassword"
            app:layout_constraintTop_toTopOf="@+id/register_ediText_confirmPassword"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/register_button_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/register_button_cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_ediText_password" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>